Fix: counter button icon alignment
The icons within the counter buttons (plus and minus) where off-center
the circle they are displayed in.

--- a/src/components/molecules/counter/counter.scss
+++ b/src/components/molecules/counter/counter.scss
@@ -11,7 +11,9 @@
 
   &__button {
     border: none;
-    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     color: $counter__button--color;
     background: $counter__button--background-color;
     width: $counter__button--size;
